added stonex-cms-amqp-lib log messages

--- a/stonex-cms-amqp/CMakeLists.txt
+++ b/stonex-cms-amqp/CMakeLists.txt
@@ -28,6 +28,7 @@ endif()
 
     
 add_subdirectory(stonex-cms-amqp-lib)
+add_subdirectory(examples)
 
 if(BUILD_TEST)
 	add_subdirectory(stonex-cms-amqp-unittests)
