--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 *
 
 !stonex-cms-amqp
+!test_package
 !.gitignore
 !conanfile.py
 !README.md
 !NOTICE
 !LICENSE
-ChangeLog.txt
+!ChangeLog.txt
+
+
+!test_package/*
