build config changes

--- a/stonex-cms-amqp/CMakeLists.txt
+++ b/stonex-cms-amqp/CMakeLists.txt
@@ -4,7 +4,7 @@ project(stonex-cms-amqp LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
-option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
+#option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
 
 if(CONAN_BUILD)
 	include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
@@ -15,17 +15,14 @@ else()
 	endif()
 endif()
 
-if(BUILD_SHARED_LIBS)
-else()
+if(BUILD_STATIC_LIBS)
 	add_compile_definitions(PN_CPP_DECLARE_STATIC)
+else()
 endif()
 
 if(CMAKE_BUILD_TYPE STREQUAL  "Debug")
 	SET(CMAKE_DEBUG_POSTFIX "d")
 endif()
-
-#set(BUILD_SHARED_LIBS 0)
-
     
 add_subdirectory(stonex-cms-amqp-lib)
 
