--- a/stonex-cms-amqp/stonex-cms-amqp-unittests/CMakeLists.txt
+++ b/stonex-cms-amqp/stonex-cms-amqp-unittests/CMakeLists.txt
@@ -29,7 +29,7 @@ if(CONAN_BUILD)
 		if(PN_CPP_DECLARE_STATIC)
 		target_link_libraries(stonex-cms-amqp-unittests stonex-cms-amqp-lib qpid-proton-cpp-static qpid-proton-proactor-static qpid-proton-core-static qpid-proton-static CONAN_PKG::jsoncpp CONAN_PKG::gtest ssl crypto)
 		else()
-			target_link_libraries(stonex-cms-amqp-unittests stonex-cms-amqp-lib CONAN_PKG::gtest CONAN_PKG::red-hat-amq-clients-c++ CONAN_PKG::jsoncpp CONAN_PKG::openssl)
+			target_link_libraries(stonex-cms-amqp-unittests stonex-cms-amqp-lib CONAN_PKG::gtest CONAN_PKG::red-hat-amq-clients-c++ CONAN_PKG::jsoncpp)
 		endif()
 		target_include_directories(stonex-cms-amqp-unittests BEFORE PRIVATE ${PROJECT_SOURCE_DIR}/../stonex-cms-amqp-lib/API ${PROJECT_SOURCE_DIR}/../stonex-cms-amqp-lib/stonex-cms-amqp-cpp  ${PROJECT_SOURCE_DIR}/../stonex-cms-amqp-lib/activemq-cpp/src/main ${CONAN_INCLUDE_DIRS_RED-HAT-AMQ-CLIENTS-C++} ) 	
 	else()
