fix build scripts

--- a/stonex-cms-amqp/stonex-cms-amqp-unittests/CMakeLists.txt
+++ b/stonex-cms-amqp/stonex-cms-amqp-unittests/CMakeLists.txt
@@ -23,13 +23,15 @@ if(WIN32)
 endif()
 
 if(CONAN_BUILD)
-	add_dependencies(stonex-cms-amqp-unittests stonex-cms-amqp-lib)
+	#add_dependencies(stonex-cms-amqp-unittests stonex-cms-amqp-lib)
 	if (UNIX)
 		message(WARNING \n\n\nprint qpid proton path ${CONAN_LIB_DIRS_RED-HAT-AMQ-CLIENTS-C++}\n\n\n) 
-		if(PN_CPP_DECLARE_STATIC)
-		target_link_libraries(stonex-cms-amqp-unittests stonex-cms-amqp-lib qpid-proton-cpp-static qpid-proton-proactor-static qpid-proton-core-static qpid-proton-static CONAN_PKG::jsoncpp CONAN_PKG::gtest ssl crypto)
+		if(BUILD_STATIC_LIBS)
+			message(WARNING \n\n\nSTATIC\n\n\n) 
+			target_link_libraries(stonex-cms-amqp-unittests stonex-cms-amqp-lib CONAN_PKG::red-hat-amq-clients-c++  CONAN_PKG::gtest)
 		else()
-			target_link_libraries(stonex-cms-amqp-unittests stonex-cms-amqp-lib CONAN_PKG::gtest CONAN_PKG::red-hat-amq-clients-c++ CONAN_PKG::jsoncpp)
+			message(WARNING \n\n\nDYNAMIC\n\n\n) 
+			target_link_libraries(stonex-cms-amqp-unittests stonex-cms-amqp-lib CONAN_PKG::gtest CONAN_PKG::red-hat-amq-clients-c++)
 		endif()
 		target_include_directories(stonex-cms-amqp-unittests BEFORE PRIVATE ${PROJECT_SOURCE_DIR}/../stonex-cms-amqp-lib/API ${PROJECT_SOURCE_DIR}/../stonex-cms-amqp-lib/stonex-cms-amqp-cpp  ${PROJECT_SOURCE_DIR}/../stonex-cms-amqp-lib/activemq-cpp/src/main ${CONAN_INCLUDE_DIRS_RED-HAT-AMQ-CLIENTS-C++} ) 	
 	else()
