modify test config

--- a/test_package/config/core_messages_test.config
+++ b/test_package/config/core_messages_test.config
@@ -13,7 +13,7 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties":{"bool_prop":false}
 				}
@@ -22,8 +22,8 @@
 		"cms_configuration": {
 			"connection1": {				
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -32,13 +32,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST::CMSClientAnycastTest/MessagePropertyTest"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -71,7 +71,7 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties":{"byte_prop":"c"}
 				}
@@ -80,8 +80,8 @@
 		"cms_configuration": {
 			"connection1": {				
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -90,13 +90,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST::CMSClientAnycastTest/MessagePropertyTest"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -129,7 +129,7 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties":{"double_prop":12345678}
 				}
@@ -138,8 +138,8 @@
 		"cms_configuration": {
 			"connection1": {	
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -148,13 +148,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST::CMSClientAnycastTest/MessagePropertyTest"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -187,7 +187,7 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties":{"float_prop":123.45678}
 				}
@@ -196,8 +196,8 @@
 		"cms_configuration": {
 			"connection1": {				
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -206,13 +206,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST::CMSClientAnycastTest/MessagePropertyTest"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -245,7 +245,7 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties":{"int_prop":123}
 				}
@@ -254,8 +254,8 @@
 		"cms_configuration": {
 			"connection1": {			
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -264,13 +264,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST::CMSClientAnycastTest/MessagePropertyTest"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -303,7 +303,7 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties":{"long_prop":123456}
 				}
@@ -312,8 +312,8 @@
 		"cms_configuration": {
 			"connection1": {				
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -322,13 +322,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST::CMSClientAnycastTest/MessagePropertyTest"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -361,7 +361,7 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties":{"short_prop":255}
 				}
@@ -370,8 +370,8 @@
 		"cms_configuration": {
 			"connection1": {				
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -380,13 +380,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST::CMSClientAnycastTest/MessagePropertyTest"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -419,12 +419,12 @@
 					"connection":"connection1",
 					"session":"session1",
 					"message_type":"text",
-					"receiver_type":"framework",
+					"receiver_type": "engine",
 					"message_count":1,
 					"properties": {
 						"reply_to":{
 							"dest_type":"queue",
-							"address":"CMS_CLIENT_QUEUE_REPLY"
+							"address":"CMS_TEST_CORE_ANYCAST_REPLY"
 						}
 					}
 				}
@@ -433,8 +433,8 @@
 		"cms_configuration": {
 			"connection1": {				
 				"broker": "failover:(localhost:5672)?maxReconnectAttempts=5",
-				"username": "admin",
-				"password": "admin",
+				"username": "client",
+				"password": "client",
 				"session": {
 					"session1": {
 						"auto_ack": true,
@@ -443,13 +443,13 @@
 							"consumers": {
 								"consumer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							},
 							"producers": {
 								"producer1": {
 									"dest_type": "queue",
-									"address": "CMS_CLIENT_QUEUE"
+									"address": "CMS_TEST_CORE_ANYCAST"
 								}
 							}
 						}
@@ -467,7 +467,7 @@
 				"properties": {
 					"reply_to":{
 						"dest_type":"queue",
-						"address":"CMS_CLIENT_QUEUE_REPLY"
+						"address":"CMS_TEST_CORE_ANYCAST_REPLY"
 					}
 				}
 			}
