--- a/stonex-cms-amqp/examples/send-receive/CMakeLists.txt
+++ b/stonex-cms-amqp/examples/send-receive/CMakeLists.txt
@@ -25,7 +25,7 @@ if(CONAN_BUILD)
 else()
 	set_property(TARGET send-receive PROPERTY  MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 	include(FetchContent)		
-	add_dependencies(send-receive stonex-cms-amqp-lib)
+	add_dependencies(send-receive stonex-cms-amqp-lib CONAN_PKG::fmt)
 	target_link_directories(send-receive PUBLIC  ../lib/Debug ${QPID_INCLUDES}/lib ${JSONCPP_LIBRARIES} ${GTEST_LIBRARIES} )
 	target_include_directories(send-receive BEFORE PRIVATE ../stonex-cms-amqp-lib/API ../stonex-cms-amqp-lib/stonex-cms-amqp-cpp ${PROJECT_SOURCE_DIR}/activemq-cpp/src/main/ ${PROJECT_SOURCE_DIR}/stonex-cms-amqp-cpp/   ${GTEST_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/teamcity-cpp/gtest ${GTEST_INCLUDES})
 	target_link_libraries(send-receive stonex-cms-amqp-lib gtest_main gmock_main jsoncpp)
