--- a/stonex-cms-amqp/examples/CMakeLists.txt
+++ b/stonex-cms-amqp/examples/CMakeLists.txt
@@ -5,4 +5,7 @@ project(examples LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
     
 add_subdirectory(send-receive)
+add_subdirectory(receiver)
+add_subdirectory(sender)
+
 
